--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               ><i class="fab fa-linkedin-in"></i
             ></a>
             <a href="https://github.com/Riuklip" target="_blank"><i class="fab fa-github"></i></a>
-            <a target="_blank" href="https://www.instagram.com/innovtech_caib/"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.instagram.com/innovatech_caib/"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
