reparacionj de la conexion al EmailJS
debido a incompatibilidades con la template el mensaje no se enviaba, reparado

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               ><i class="fab fa-linkedin-in"></i
             ></a>
             <a href="https://github.com/Riuklip" target="_blank"><i class="fab fa-github"></i></a>
-            <a target="_blank" href="https://www.instagram.com/innovatech_caib/"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.instagram.com/innovtech_caib/"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
@@ -356,8 +356,7 @@
         <p>&copy; 2025 InnovaTech. Todos los derechos reservados.</p>
       </div>
     </footer>
-    <!-- Agrega este script en el <head> -->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-    <script src="script.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script src="script.js" type="module"></script>
   </body>
 </html>
