--- a/index.html
+++ b/index.html
@@ -71,25 +71,20 @@
 
     <!-- About Section -->
     <section class="about" id="sobre-mi">
-      <div class="container about-container">
-        <div class="about-img">
-          <img
-            src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-            alt="Ingeniero Electrónico"
-          />
-        </div>
-        <div class="about-text">
-          <h2>Sobre Mí</h2>
-          <p>
-            Soy un Ingeniero graduado en Telecomunicaciones y Electrónica en la UCLV, universidad en la que esta carrera se considera de excelecia, mi pasión es trabajar solucionando los problemas y diseñando soluciones acordes. 
-          </p>
-          <p>
-            Especializado en diseño de circuitos electrónicos, reparación de
-            hardware, desarrollo de software y soluciones web personalizadas,
-            ofrezco un servicio profesional con resultados garantizados.
-          </p>
-        </div>
+    <h2>Sobre Nosotros</h2>
+    <template class="about_template">
+      <div class="container_devs">
+      <img src="" alt="">
+      <div class="cont_info">
+          <h2 class="about_name"></h2>
+          <p class="about_info"></p>
+          <div class="about_links">
+          <a href="" class="about_phone"><i class="fab fa-whatsapp"></i></a>
+          <a href="" class="about_mail"> <i class="fas fa-envelope"></i></a>
       </div>
+      </div>
+      </div>
+  </template>
     </section>
 
     <!-- Services Section -->
