seccion about se torna responsive
se añade caracteristicas responsive a la sccion about

--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@
     <h2>Sobre Nosotros</h2>
     <template class="about_template">
       <div class="container_devs">
-      <img src="" alt="">
-      <div class="cont_info">
+      <!-- <div class="about_img"> -->
+        <img src="" alt="">
+      <!-- </div> -->
+        <div class="cont_info">
           <h2 class="about_name"></h2>
           <p class="about_info"></p>
+          <h4 class="about_ciudad"></h4>
           <div class="about_links">
           <a href="" class="about_phone"><i class="fab fa-whatsapp"></i></a>
           <a href="" class="about_mail"> <i class="fas fa-envelope"></i></a>
